# cosy-luigi

./: .gitignore  404.html  CITATION.cff  README.md  hatch.toml  index.html  objects.inv  properdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build-nightly.yml  check-docs.yml  checks.yml  deploy-docs.yml  pr-rules-develop.yml  pr-rules-main.yml  pre-release.yml  release.yml
about/authors/: index.html
benchmarks/: test_benchmark_chain_100.py
bibliographies/: bibliography.bib
docs/: index.md
docs/about/: authors.md
docs/examples/: introduction.md
docs/stylesheets/: extra.css
examples/SUMMARY/: index.html
examples/getting_started/: README.md  basic_example.py  variation_example.py
examples/introduction/: index.html
examples/lot_sizing/: README.md  index.html  lot_sizing_pipeline.py  requirements.txt
examples/lot_sizing/lot_optimizers/: groff_heuristic.py  least_unit_cost_method.py  part_period_heuristic.py  silver_meal_heuristic.py  wagner_whitin.py
examples/lot_sizing/lot_optimizers/groff_heuristic/: index.html
examples/lot_sizing/lot_optimizers/least_unit_cost_method/: index.html
examples/lot_sizing/lot_optimizers/part_period_heuristic/: index.html
examples/lot_sizing/lot_optimizers/silver_meal_heuristic/: index.html
examples/lot_sizing/lot_optimizers/wagner_whitin/: index.html
examples/lot_sizing/lot_sizing_pipeline/: index.html
examples/ml_blood_sugar/: ml_blood_sugar.py
examples/ml_blood_sugar/ml_blood_sugar/: index.html
examples/ml_blood_sugar_level/: README.md  index.html  ml_blood_sugar_level.py  requirements.txt
examples/ml_blood_sugar_level/ml_blood_sugar_level/: index.html
quick-start/: index.html
reference/SUMMARY/: index.html
reference/cosy_luigi/__init__/: index.html
reference/cosy_luigi/_version/: index.html
reference/cosy_luigi/combinatorics/: index.html
scripts/: gen_example_pages.py
search/: search_index.json
src/cosy_luigi/: __init__.py  combinatorics.py
src/cosy_luigi/constraints/: __init__.py  unique.py
src/cosy_luigi/core/: __init__.py  combinatorics.py
src/cosy_luigi/utils/: __init__.py  traversals.py
tests/: test_abstract_variant_expansion.py  test_heterogeneous_repo_input.py  test_infinite_chain.py  test_unique_task_parameter.py
